--- a/Sprint0/Task1.ipynb
+++ b/Sprint0/Task1.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -63,7 +63,14 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Vehicle\n",
+    "{\n",
+    "    \n",
+    "}\n",
+    "\n",
+    "Vehicle Car = new Vehicle();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -79,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -137,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -146,8 +153,38 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Запустить двигатель...\n",
+      "Красный\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Vehicle\n",
+    "{\n",
+    "    private string color;\n",
+    "\n",
+    "    public string Color\n",
+    "    {\n",
+    "        get { return color; }\n",
+    "        set { color = value; }\n",
+    "    }\n",
+    "\n",
+    "    public void StartEngine()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Запустить двигатель...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Vehicle Car = new Vehicle();\n",
+    "Car.Color = \"Красный\";\n",
+    "Car.StartEngine();\n",
+    "Console.WriteLine(Car.Color)"
+   ]
   },
   {
    "cell_type": "markdown",
