--- a/Sprint0/Task1.ipynb
+++ b/Sprint0/Task1.ipynb
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -275,8 +275,49 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Красный\n",
+      "Поехали...\n",
+      "Синий\n",
+      "Поехали...\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Vehicle\n",
+    "{\n",
+    "    private string color;\n",
+    "\n",
+    "    public string Color\n",
+    "    {\n",
+    "        get { return color; }\n",
+    "        set { color = value; }\n",
+    "    }\n",
+    "    public void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Поехали...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Car : Vehicle\n",
+    "{\n",
+    "    \n",
+    "}\n",
+    "Vehicle myVehicle = new Vehicle();\n",
+    "Car myCar = new Car();\n",
+    "\n",
+    "myCar.Color = \"Красный\";\n",
+    "Console.WriteLine(myCar.Color);\n",
+    "myCar.Move();\n",
+    "\n",
+    "myVehicle.Color = \"Синий\";\n",
+    "Console.WriteLine(myVehicle.Color);\n",
+    "myVehicle.Move();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -360,7 +401,30 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Vehicle\n",
+    "{\n",
+    "    public virtual void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Транспорт двигается\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Car : Vehicle\n",
+    "{\n",
+    "    public override void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Автомобиль двигается\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Vehicle myVehicle = new Vehicle();\n",
+    "Car myCar = new Car();\n",
+    "\n",
+    "\n",
+    "myVehicle.Move();\n",
+    "myCar.Move();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -444,7 +508,30 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "abstract class Car\n",
+    "{\n",
+    "    public abstract void ChargeBattery();\n",
+    "\n",
+    "    public void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Поехали...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class ElectricCar : Car\n",
+    "{\n",
+    "    public override void ChargeBattery()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Батарея заряжена...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "ElectricCar myElectricCar = new ElectricCar();\n",
+    "\n",
+    "myElectricCar.ChargeBattery();\n",
+    "myElectricCar.Move();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -543,7 +630,39 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "using System;\n",
+    "\n",
+    "public class Engine\n",
+    "{\n",
+    "    public void Start() => Console.WriteLine(\"Двигатель стартовал\");\n",
+    "    public void Stop() => Console.WriteLine(\"Двигатель остановлен\");\n",
+    "}\n",
+    "\n",
+    "public class Car\n",
+    "{\n",
+    "    private Engine engine;\n",
+    "\n",
+    "    public Car(Engine engine)\n",
+    "    {\n",
+    "        this.engine = engine;\n",
+    "    }\n",
+    "\n",
+    "    public void Drive()\n",
+    "    {\n",
+    "        engine.Start();\n",
+    "\n",
+    "        Console.WriteLine(\"Автомобиль двигается\");\n",
+    "\n",
+    "        engine.Stop();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Engine myEngine = new Engine(); \n",
+    "Car myAuto = new Car(myEngine); \n",
+    "\n",
+    "myAuto.Drive();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -681,7 +800,51 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "using System;\n",
+    "\n",
+    "abstract class Vehicle\n",
+    "{\n",
+    "    public abstract void Drive();\n",
+    "}\n",
+    "\n",
+    "class Car : Vehicle\n",
+    "{\n",
+    "    private Driver driver;\n",
+    "\n",
+    "    public Car(Driver driver)\n",
+    "    {\n",
+    "        this.driver = driver;\n",
+    "    }\n",
+    "\n",
+    "    public override void Drive()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Автомобиль движется...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Driver\n",
+    "{\n",
+    "    public string Name { get; set; }\n",
+    "\n",
+    "    public Driver(string name)\n",
+    "    {\n",
+    "        Name = name;\n",
+    "    }\n",
+    "\n",
+    "    public void Drive(Vehicle vehicle)\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} управляет траспортом...\");\n",
+    "        vehicle.Drive();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "    Driver Igor = new Driver(\"Игорь\");\n",
+    "    Car myCar = new Car(Igor);\n",
+    "\n",
+    "    myCar.Drive();\n",
+    "    Igor.Drive(myCar);"
+   ]
   },
   {
    "cell_type": "markdown",
