--- a/Sprint0/Task1.ipynb
+++ b/Sprint0/Task1.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -96,7 +96,14 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Animal\n",
+    "{\n",
+    "    \n",
+    "}\n",
+    "\n",
+    "Animal Dog = new Animal();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -209,7 +216,26 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Animal {\n",
+    "    private string breed;\n",
+    "\n",
+    "    public string Breed {\n",
+    "        get{return breed; }\n",
+    "        set{breed = value; }\n",
+    "    }\n",
+    "\n",
+    "    public void ToFeed() {\n",
+    "        Console.WriteLine(\"Покормить\");\n",
+    "    }\n",
+    "    \n",
+    "}\n",
+    "\n",
+    "Animal Dog = new Animal();\n",
+    "Dog.Breed = \"Овчарка\";\n",
+    "Dog.ToFeed();\n",
+    "Console.WriteLine(Dog.Breed);"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -266,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -332,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -341,8 +367,49 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Овчарка\n",
+      "Ест\n",
+      "Собака\n",
+      "Ест\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Animal {\n",
+    "\n",
+    "    private string breed;\n",
+    "\n",
+    "    public string Breed {\n",
+    "        get{return breed; }\n",
+    "        set{breed = value;} \n",
+    "    }\n",
+    "\n",
+    "    public void Eat() {\n",
+    "        Console.WriteLine(\"Ест\");\n",
+    "    }\n",
+    "\n",
+    "}\n",
+    "\n",
+    "class Dog : Animal\n",
+    "{\n",
+    "    \n",
+    "}\n",
+    "Animal myAnimal = new Animal();\n",
+    "Dog myDog = new Dog();\n",
+    "\n",
+    "myDog.Breed = \"Овчарка\";\n",
+    "Console.WriteLine(myDog.Breed);\n",
+    "myDog.Eat();\n",
+    "\n",
+    "myAnimal.Breed = \"Собака\";\n",
+    "Console.WriteLine(myAnimal.Breed);\n",
+    "myAnimal.Eat();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -391,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -400,7 +467,16 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Транспорт двигается\n",
+      "Автомобиль двигается\n"
+     ]
+    }
+   ],
    "source": [
     "class Vehicle\n",
     "{\n",
@@ -439,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -448,8 +524,40 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Животное ест\n",
+      "Собака ест\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Animal\n",
+    "{\n",
+    "    public virtual void Eat()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Животное ест\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Dog : Animal\n",
+    "{\n",
+    "    public override void Eat()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Собака ест\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Animal myAnimal = new Animal();\n",
+    "Dog myDog = new Dog();\n",
+    "\n",
+    "\n",
+    "myAnimal.Eat();\n",
+    "myDog.Eat();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -498,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -507,7 +615,16 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Батарея заряжена...\n",
+      "Поехали...\n"
+     ]
+    }
+   ],
    "source": [
     "abstract class Car\n",
     "{\n",
@@ -620,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -629,7 +746,17 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Двигатель стартовал\n",
+      "Автомобиль двигается\n",
+      "Двигатель остановлен\n"
+     ]
+    }
+   ],
    "source": [
     "using System;\n",
     "\n",
@@ -790,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -799,7 +926,17 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Автомобиль движется...\n",
+      "Игорь управляет траспортом...\n",
+      "Автомобиль движется...\n"
+     ]
+    }
+   ],
    "source": [
     "using System;\n",
     "\n",
