--- a/Sprint0/Task1.ipynb
+++ b/Sprint0/Task1.ipynb
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -672,8 +672,50 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Собака гавкает\n",
+      "Животное спит\n",
+      "Кошка мяукает\n",
+      "Животное спит\n"
+     ]
+    }
+   ],
+   "source": [
+    "abstract class Animal {\n",
+    "    public abstract void MakeSound();\n",
+    "\n",
+    "    public void Sleep() {\n",
+    "        Console.WriteLine(\"Животное спит\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Dog : Animal {\n",
+    "\n",
+    "    public override void MakeSound() {\n",
+    "        Console.WriteLine(\"Собака гавкает\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Cat : Animal {\n",
+    "\n",
+    "    public override void MakeSound() {\n",
+    "        Console.WriteLine(\"Кошка мяукает\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Dog myDog = new Dog();\n",
+    "Cat myCat = new Cat();\n",
+    "\n",
+    "myDog.MakeSound();\n",
+    "myDog.Sleep();\n",
+    "\n",
+    "myCat.MakeSound();\n",
+    "myCat.Sleep();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -804,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -813,8 +855,49 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Собака проснулась\n",
+      "Собака поела\n",
+      "Собака уснула\n"
+     ]
+    }
+   ],
+   "source": [
+    "using System;\n",
+    "\n",
+    "public class Dog\n",
+    "{\n",
+    "public void Wake() => Console.WriteLine(\"Собака проснулась\");\n",
+    "public void Sleep() => Console.WriteLine(\"Собака уснула\");\n",
+    "}\n",
+    "\n",
+    "public class Animal\n",
+    "{\n",
+    "private Dog dog;\n",
+    "public Animal(Dog dog)\n",
+    "{\n",
+    "    this.dog = dog;\n",
+    "}\n",
+    "\n",
+    "public void Eat()\n",
+    "{\n",
+    "    dog.Wake();\n",
+    "\n",
+    "    Console.WriteLine(\"Собака поела\");\n",
+    "\n",
+    "    dog.Sleep();\n",
+    "}\n",
+    "}\n",
+    "\n",
+    "Dog myDog = new Dog();\n",
+    "Animal myAnimal = new Animal(myDog);\n",
+    "\n",
+    "myAnimal.Eat();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -996,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1005,8 +1088,53 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Собака является питомцем\n",
+      "Вадим ухаживает за питомцем\n",
+      "Собака является питомцем\n"
+     ]
+    }
+   ],
+   "source": [
+    "using System;\n",
+    "\n",
+    "abstract class Animal {\n",
+    "    public abstract void BeingAPet();\n",
+    "}\n",
+    "\n",
+    "class Dog : Animal {\n",
+    "    private Owner owner;\n",
+    "\n",
+    "    public Dog(Owner owner) {\n",
+    "        this.owner = owner;\n",
+    "    }\n",
+    "\n",
+    "    public override void BeingAPet() {\n",
+    "        Console.WriteLine(\"Собака является питомцем\");\n",
+    "    }\n",
+    "}\n",
+    "class Owner {\n",
+    "    public string Name {get; set ;}\n",
+    "\n",
+    "    public Owner(string name) {\n",
+    "        Name = name;\n",
+    "    }\n",
+    "\n",
+    "    public void TakeCareOfPet(Animal animal) {\n",
+    "        Console.WriteLine($\"{Name} ухаживает за питомцем\");\n",
+    "        animal.BeingAPet();\n",
+    "    }\n",
+    "\n",
+    "}\n",
+    "Owner Vadim = new Owner(\"Вадим\");\n",
+    "Dog myDog = new Dog(Vadim);\n",
+    "myDog.BeingAPet();\n",
+    "Vadim.TakeCareOfPet(myDog)"
+   ]
   }
  ],
  "metadata": {
