--- a/Sprint0/Task3.ipynb
+++ b/Sprint0/Task3.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "----\n",
     "\n",
-    "### Вариант задания \n"
+    "### Вариант задания 5\n"
    ]
   },
   {
@@ -26,7 +26,45 @@
     "\n",
     "----\n",
     "\n",
-    "[ваш текст]\n"
+    "Описание задачи:\n",
+    "\n",
+    "Создать базовый класс Book в C#, который будет представлять информацию о\n",
+    "книгах. На основе этого класса разработать 2-3 производных класса,\n",
+    "демонстрирующих принципы наследования и полиморфизма. В каждом из классов\n",
+    "должны быть реализованы новые атрибуты и методы, а также переопределены\n",
+    "некоторые методы базового класса для демонстрации полиморфизма.\n",
+    "\n",
+    "Требования к базовому классу Book:\n",
+    "\n",
+    "• Атрибуты: Название (Title), Автор (Author), Год издания (YearOfPublication).\n",
+    "\n",
+    "• Методы:\n",
+    "\n",
+    "o GetInfo(): метод для получения информации о книге в виде строки.\n",
+    "\n",
+    "o Read(): метод для вывода сообщения о чтении книги.\n",
+    "\n",
+    "o Borrow(): метод для вывода сообщения о выдаче книги на чтениеа.\n",
+    "\n",
+    "<h2 style=\"color:DodgerBlue\">Требования к производным классам:</h2>\n",
+    "\n",
+    "----\n",
+    "\n",
+    "1. Учебник (Textbook): Должен содержать дополнительные атрибуты, такие как\n",
+    "Предмет (Subject). Метод Read() должен быть переопределен для\n",
+    "добавления информации о предмете при чтении учебника.\n",
+    "\n",
+    "2. Художественная литература (Fiction): Должен содержать дополнительные\n",
+    "атрибуты, такие как Жанр (Genre). Метод Borrow() должен быть\n",
+    "переопределен для добавления информации о жанре при выдаче книги на\n",
+    "чтение.\n",
+    "\n",
+    "3. Научная литература (ScientificLiterature) (если требуется третий класс):\n",
+    "Должен содержать дополнительные атрибуты, такие как Область науки\n",
+    "(FieldOfScience). Метод GetInfo() должен быть переопределен для включения\n",
+    "информации об области науки в описании книги.\n",
+    "\n",
+    "\n"
    ]
   },
   {
