--- a/Sprint0/Task3.ipynb
+++ b/Sprint0/Task3.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "o Read(): метод для вывода сообщения о чтении книги.\n",
     "\n",
-    "o Borrow(): метод для вывода сообщения о выдаче книги на чтениеа.\n",
+    "o Borrow(): метод для вывода сообщения о выдаче книги на чтение.\n",
     "\n",
     "<h2 style=\"color:DodgerBlue\">Требования к производным классам:</h2>\n",
     "\n",
@@ -88,7 +88,112 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "using System;\n",
+    "\n",
+    "public interface IBook \n",
+    "{\n",
+    "    string Title { get; set; }\n",
+    "    string Author { get; set; }\n",
+    "    int YearOfPublication { get; set; }\n",
+    "\n",
+    "    void GetInfo();\n",
+    "    void Read();\n",
+    "    void Borrow();\n",
+    "}\n",
+    "\n",
+    "public interface ITextbook\n",
+    "{\n",
+    "    string Subject { get; set; }\n",
+    "}\n",
+    "\n",
+    "public interface IFiction \n",
+    "{\n",
+    "    string Genre { get; set; }\n",
+    "}\n",
+    "\n",
+    "public interface IScientificLiterature \n",
+    "{\n",
+    "    string FieldOfScience { get; set; }\n",
+    "}\n",
+    "\n",
+    "public class Book : IBook\n",
+    "{\n",
+    "    public string Title { get; set; }\n",
+    "    public string Author { get; set; }\n",
+    "    public int YearOfPublication { get; set; }\n",
+    "\n",
+    "    public Book(string title, string author, int yearOfPublication) \n",
+    "    {\n",
+    "        Title = title;\n",
+    "        Author = author;\n",
+    "        YearOfPublication = yearOfPublication;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void GetInfo() \n",
+    "    {\n",
+    "        Console.WriteLine($\"Название: {Title}, Автор: {Author}, Год издания: {YearOfPublication}\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual void Read() \n",
+    "    {\n",
+    "        Console.WriteLine($\"Вы прочитали книгу '{Title}'\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual void Borrow() \n",
+    "    {\n",
+    "        Console.WriteLine($\"Вам выдали книгу '{Title}'\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Textbook : Book, ITextbook \n",
+    "{\n",
+    "    public string Subject { get; set; }\n",
+    "\n",
+    "    public Textbook(string title, string author, int yearOfPublication, string subject)\n",
+    "        : base(title, author, yearOfPublication) \n",
+    "    {\n",
+    "        Subject = subject;\n",
+    "    }\n",
+    "\n",
+    "    public override void Read() \n",
+    "    {\n",
+    "        Console.WriteLine($\"Вы читаете учебник '{Title}' по предмету '{Subject}'\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Fiction : Book, IFiction \n",
+    "{\n",
+    "    public string Genre { get; set; }\n",
+    "\n",
+    "    public Fiction(string title, string author, int yearOfPublication, string genre)\n",
+    "        : base(title, author, yearOfPublication)\n",
+    "    {\n",
+    "        Genre = genre;\n",
+    "    }\n",
+    "\n",
+    "    public override void Borrow()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Вам выдали художественную книгу '{Title}', жанр которой '{Genre}'\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class ScientificLiterature : Book, IScientificLiterature \n",
+    "{\n",
+    "    public string FieldOfScience { get; set; }\n",
+    "\n",
+    "    public ScientificLiterature(string title, string author, int yearOfPublication, string fieldOfScience)\n",
+    "        : base(title, author, yearOfPublication)\n",
+    "    {\n",
+    "        FieldOfScience = fieldOfScience;\n",
+    "    }\n",
+    "\n",
+    "    public override void GetInfo() \n",
+    "    {\n",
+    "        Console.WriteLine($\"Название: {Title}, Автор: {Author}, Год издания: {YearOfPublication}, Область науки: {FieldOfScience}\");\n",
+    "    }\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
