--- a/Sprint0/Task1.ipynb
+++ b/Sprint0/Task1.ipynb
@@ -160,16 +160,7 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Запустить двигатель...\n",
-      "Красный\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Vehicle\n",
     "{\n",
@@ -217,15 +208,18 @@
    },
    "outputs": [],
    "source": [
-    "class Animal {\n",
+    "class Animal \n",
+    "{\n",
     "    private string breed;\n",
     "\n",
-    "    public string Breed {\n",
+    "    public string Breed \n",
+    "    {\n",
     "        get{return breed; }\n",
     "        set{breed = value; }\n",
     "    }\n",
     "\n",
-    "    public void ToFeed() {\n",
+    "    public void ToFeed() \n",
+    "    {\n",
     "        Console.WriteLine(\"Покормить\");\n",
     "    }\n",
     "    \n",
@@ -301,18 +295,7 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Красный\n",
-      "Поехали...\n",
-      "Синий\n",
-      "Поехали...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Vehicle\n",
     "{\n",
@@ -367,24 +350,15 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Овчарка\n",
-      "Ест\n",
-      "Собака\n",
-      "Ест\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "class Animal {\n",
+    "class Animal \n",
+    "{\n",
     "\n",
     "    private string breed;\n",
     "\n",
-    "    public string Breed {\n",
+    "    public string Breed \n",
+    "    {\n",
     "        get{return breed; }\n",
     "        set{breed = value;} \n",
     "    }\n",
@@ -467,16 +441,7 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Транспорт двигается\n",
-      "Автомобиль двигается\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Vehicle\n",
     "{\n",
@@ -524,16 +489,7 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Животное ест\n",
-      "Собака ест\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Animal\n",
     "{\n",
@@ -615,16 +571,7 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Батарея заряжена...\n",
-      "Поехали...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "abstract class Car\n",
     "{\n",
@@ -672,37 +619,32 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Собака гавкает\n",
-      "Животное спит\n",
-      "Кошка мяукает\n",
-      "Животное спит\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "abstract class Animal {\n",
+    "abstract class Animal \n",
+    "{\n",
     "    public abstract void MakeSound();\n",
     "\n",
-    "    public void Sleep() {\n",
+    "    public void Sleep() \n",
+    "    {\n",
     "        Console.WriteLine(\"Животное спит\");\n",
     "    }\n",
     "}\n",
     "\n",
-    "class Dog : Animal {\n",
+    "class Dog : Animal \n",
+    "{\n",
     "\n",
-    "    public override void MakeSound() {\n",
+    "    public override void MakeSound() \n",
+    "    {\n",
     "        Console.WriteLine(\"Собака гавкает\");\n",
     "    }\n",
     "}\n",
     "\n",
-    "class Cat : Animal {\n",
+    "class Cat : Animal \n",
+    "{\n",
     "\n",
-    "    public override void MakeSound() {\n",
+    "    public override void MakeSound() \n",
+    "    {\n",
     "        Console.WriteLine(\"Кошка мяукает\");\n",
     "    }\n",
     "}\n",
@@ -788,17 +730,7 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Двигатель стартовал\n",
-      "Автомобиль двигается\n",
-      "Двигатель остановлен\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using System;\n",
     "\n",
@@ -855,17 +787,7 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Собака проснулась\n",
-      "Собака поела\n",
-      "Собака уснула\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using System;\n",
     "\n",
@@ -1009,17 +931,7 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Автомобиль движется...\n",
-      "Игорь управляет траспортом...\n",
-      "Автомобиль движется...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using System;\n",
     "\n",
@@ -1088,43 +1000,40 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Собака является питомцем\n",
-      "Вадим ухаживает за питомцем\n",
-      "Собака является питомцем\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using System;\n",
     "\n",
-    "abstract class Animal {\n",
+    "abstract class Animal \n",
+    "{\n",
     "    public abstract void BeingAPet();\n",
     "}\n",
     "\n",
-    "class Dog : Animal {\n",
+    "class Dog : Animal \n",
+    "{\n",
     "    private Owner owner;\n",
     "\n",
-    "    public Dog(Owner owner) {\n",
+    "    public Dog(Owner owner) \n",
+    "    {\n",
     "        this.owner = owner;\n",
     "    }\n",
     "\n",
-    "    public override void BeingAPet() {\n",
+    "    public override void BeingAPet() \n",
+    "    {\n",
     "        Console.WriteLine(\"Собака является питомцем\");\n",
     "    }\n",
     "}\n",
-    "class Owner {\n",
+    "class Owner \n",
+    "{\n",
     "    public string Name {get; set ;}\n",
     "\n",
-    "    public Owner(string name) {\n",
+    "    public Owner(string name) \n",
+    "    {\n",
     "        Name = name;\n",
     "    }\n",
     "\n",
-    "    public void TakeCareOfPet(Animal animal) {\n",
+    "    public void TakeCareOfPet(Animal animal) \n",
+    "    {\n",
     "        Console.WriteLine($\"{Name} ухаживает за питомцем\");\n",
     "        animal.BeingAPet();\n",
     "    }\n",
