--- a/Sprint1/Task0.ipynb
+++ b/Sprint1/Task0.ipynb
@@ -210,7 +210,59 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "public interface IVehicle \n",
+    "{\n",
+    "    void Accelerate(int speed);\n",
+    "}\n",
+    "\n",
+    "internal class Engine\n",
+    "{\n",
+    "    internal int Horsepower {get ; set;} \n",
+    "\n",
+    "    public Engine(int horsepower) \n",
+    "    {\n",
+    "        Horsepower = horsepower;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Vehicle : IVehicle\n",
+    "{\n",
+    "    public static int TotalVehicles {get; private set;}\n",
+    "\n",
+    "    public Engine VehicleEngine {get; set;}\n",
+    "\n",
+    "    public Vehicle() \n",
+    "    {\n",
+    "        TotalVehicles++;\n",
+    "    }    \n",
+    "\n",
+    "    public int Speed {get; set;}\n",
+    "\n",
+    "    public void Accelerate(int speed) \n",
+    "    {\n",
+    "        Speed += speed;\n",
+    "    }\n",
+    "\n",
+    "    public string Color {get ; set ;}\n",
+    "\n",
+    "    public Vehicle(string color, int horsepower) : this() \n",
+    "    {\n",
+    "        Color = color;\n",
+    "        VehicleEngine = new Engine(horsepower);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Car : Vehicle \n",
+    "{\n",
+    "\n",
+    "    public Car(string color, int horsepower) \n",
+    "    : base(color, horsepower) \n",
+    "    {\n",
+    "       \n",
+    "    }\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -234,8 +286,124 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Шарик молчит\n",
+      "Шарик рычит\n",
+      "Пёс Шарик хочет есть\n",
+      "Пёс Шарик не хочет есть\n"
+     ]
+    }
+   ],
+   "source": [
+    "public interface IAnimal \n",
+    "{\n",
+    "    void Eat();\n",
+    "    void MakeSound();\n",
+    "}\n",
+    "\n",
+    "internal class Mood \n",
+    "{\n",
+    "    internal static string CurrentMood {get; private set;}\n",
+    "\n",
+    "    static Mood()\n",
+    "    {\n",
+    "        CurrentMood = \"Спокойное\";\n",
+    "    }\n",
+    "\n",
+    "    public static void ChangeMood(string newMood) \n",
+    "    {\n",
+    "        CurrentMood = newMood;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Animal : IAnimal \n",
+    "{\n",
+    "\n",
+    "    public string Name {get; private set;}\n",
+    "    protected bool IsHungry {get; set;}\n",
+    "\n",
+    "    public Animal(string name, bool isHungry) \n",
+    "    {\n",
+    "        Name = name;\n",
+    "        IsHungry = isHungry;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void Eat() \n",
+    "    {\n",
+    "\n",
+    "        if (IsHungry) \n",
+    "        {\n",
+    "            Console.WriteLine($\"{Name} ест\");\n",
+    "            IsHungry = false;\n",
+    "        } \n",
+    "        else \n",
+    "        {\n",
+    "            Console.WriteLine($\"{Name} не хочет есть\");\n",
+    "        }\n",
+    "    }\n",
+    "    public virtual void MakeSound() \n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} изадёт звук\");\n",
+    "    }\n",
+    "    \n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal \n",
+    "{\n",
+    "\n",
+    "    public Dog(string name, bool isHungry) : base(name, isHungry) {\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "    public override void Eat() \n",
+    "    {\n",
+    "\n",
+    "        if (IsHungry) \n",
+    "        {\n",
+    "\n",
+    "            Console.WriteLine($\"Пёс {Name} хочет есть\");\n",
+    "            IsHungry = false;\n",
+    "        }\n",
+    "        else \n",
+    "        {\n",
+    "            Console.WriteLine($\"Пёс {Name} не хочет есть\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public override void MakeSound() \n",
+    "    {\n",
+    "\n",
+    "       if (Mood.CurrentMood == \"Спокойное\") \n",
+    "       {\n",
+    "            Console.WriteLine($\"{Name} молчит\");\n",
+    "       }\n",
+    "\n",
+    "       else if (Mood.CurrentMood == \"Злое\") \n",
+    "       { \n",
+    "            Console.WriteLine($\"{Name} рычит\");\n",
+    "       }\n",
+    "\n",
+    "       else \n",
+    "       {\n",
+    "            Console.WriteLine($\"{Name} гавкает\");\n",
+    "       }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Dog myDog = new Dog(\"Шарик\", true);\n",
+    "\n",
+    "myDog.MakeSound();\n",
+    "\n",
+    "Mood.ChangeMood(\"Злое\");\n",
+    "myDog.MakeSound();\n",
+    "\n",
+    "myDog.Eat();\n",
+    "myDog.Eat();"
+   ]
   }
  ],
  "metadata": {
