--- a/Sprint1/Task2.ipynb
+++ b/Sprint1/Task2.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -111,7 +111,61 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "public class Vehicle\n",
+    "{\n",
+    "    public string Color { get; set;} \n",
+    "    private int speed; \n",
+    "\n",
+    "    public void SetSpeed(int value) \n",
+    "    {\n",
+    "        speed = value;\n",
+    "    }\n",
+    "\n",
+    "    public int GetSpeed() \n",
+    "    {\n",
+    "        return speed;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Car : Vehicle\n",
+    "{\n",
+    "    private int fuelLevel; \n",
+    "\n",
+    "    public void Refuel(int amount) \n",
+    "    {\n",
+    "        fuelLevel += amount;\n",
+    "    }\n",
+    "\n",
+    "    public void CheckSpeedLimit() \n",
+    "    {\n",
+    "        if (GetSpeed() > 120)\n",
+    "        {\n",
+    "            Console.WriteLine(\"Превышен скоростной режим!\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public void SetFuelLevel(int amount)\n",
+    "    {\n",
+    "        fuelLevel = amount;\n",
+    "    }\n",
+    "\n",
+    "    public int GetFuelLevel()\n",
+    "    {\n",
+    "        return fuelLevel;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Vehicle myVehicle = new Vehicle();\n",
+    "Car myCar = new Car();\n",
+    "\n",
+    "myVehicle.Color = \"Red\";\n",
+    "myVehicle.SetSpeed(60);\n",
+    "\n",
+    "myCar.Color = \"Blue\";\n",
+    "myCar.SetFuelLevel(100);\n",
+    "myCar.Refuel(50);"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -126,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -135,8 +189,104 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Возраст животного: 4\n",
+      "Собака устала и не может гулять\n",
+      "Собака устала после прогулки\n",
+      "Общее количество животных: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Animal \n",
+    "{\n",
+    "    private string _breed; \n",
+    "    private int _age;\n",
+    "\n",
+    "    public string Breed \n",
+    "    {\n",
+    "        get {return _breed ;}\n",
+    "        set {_breed = value ;}\n",
+    "    }\n",
+    "\n",
+    "    public int Age \n",
+    "    {\n",
+    "        get{return _age ;}\n",
+    "        set{\n",
+    "            if (value > 0) \n",
+    "            {\n",
+    "                _age = value;\n",
+    "                Console.WriteLine($\"Возраст животного: {Age}\");\n",
+    "            }\n",
+    "            else \n",
+    "            {\n",
+    "                throw new ArgumentOutOfRangeException(\"Возраст не может отрицательным числом\");\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public static int TotalAnimals {get; set;} = 0;\n",
+    "    public Animal() \n",
+    "    {\n",
+    "        TotalAnimals++;\n",
+    "    }\n",
+    "\n",
+    "    public static void DisplayTotalAnimals() \n",
+    "    {\n",
+    "        Console.WriteLine($\"Общее количество животных: {TotalAnimals}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal \n",
+    "{\n",
+    "    private int _energyLevel;\n",
+    "\n",
+    "    public int EnergyLevel \n",
+    "    {\n",
+    "        get {return _energyLevel;}\n",
+    "        set {_energyLevel = value;} \n",
+    "    }\n",
+    "\n",
+    "    public Dog() : base() \n",
+    "    {\n",
+    "        EnergyLevel = 100;\n",
+    "    }\n",
+    "\n",
+    "    public void Walk(int duration) \n",
+    "    {\n",
+    "        EnergyLevel -= duration;\n",
+    "\n",
+    "        if (EnergyLevel < 0) \n",
+    "        {\n",
+    "            EnergyLevel = 0;\n",
+    "            Console.WriteLine(\"Собака устала и не может гулять\");\n",
+    "        }\n",
+    "\n",
+    "        if (EnergyLevel >= 0 && EnergyLevel <= 15) \n",
+    "        {\n",
+    "            Console.WriteLine(\"Собака устала после прогулки\");\n",
+    "        }\n",
+    "\n",
+    "        else \n",
+    "        {\n",
+    "            Console.WriteLine($\"Уровень энергии после прогулки: {EnergyLevel}\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "Dog myDog = new Dog();\n",
+    "myDog.Breed = \"Овчарка\";\n",
+    "myDog.Age = 4;\n",
+    "myDog.Walk(105);\n",
+    "\n",
+    "Animal myAnimal = new Animal();\n",
+    "Animal.DisplayTotalAnimals();"
+   ]
   }
  ],
  "metadata": {
