--- a/Sprint1/Task3.ipynb
+++ b/Sprint1/Task3.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "----\n",
     "\n",
-    "### Вариант задания \n"
+    "### Вариант задания 5\n"
    ]
   },
   {
@@ -26,7 +26,43 @@
     "\n",
     "----\n",
     "\n",
-    "[ваш текст]\n",
+    "Описание задачи:\n",
+    "\n",
+    "Создать базовый класс Book в C#, который будет представлять информацию о\n",
+    "книгах. На основе этого класса разработать 2-3 производных класса,\n",
+    "демонстрирующих принципы наследования и полиморфизма. В каждом из классов\n",
+    "должны быть реализованы новые атрибуты и методы, а также переопределены\n",
+    "некоторые методы базового класса для демонстрации полиморфизма.\n",
+    "\n",
+    "Требования к базовому классу Book:\n",
+    "\n",
+    "• Атрибуты: Название (Title), Автор (Author), Год издания (YearOfPublication).\n",
+    "\n",
+    "• Методы:\n",
+    "\n",
+    "o GetInfo(): метод для получения информации о книге в виде строки.\n",
+    "\n",
+    "o Read(): метод для вывода сообщения о чтении книги.\n",
+    "\n",
+    "o Borrow(): метод для вывода сообщения о выдаче книги на чтение.\n",
+    "\n",
+    "<h2 style=\"color:DodgerBlue\">Требования к производным классам:</h2>\n",
+    "\n",
+    "----\n",
+    "\n",
+    "1. Учебник (Textbook): Должен содержать дополнительные атрибуты, такие как\n",
+    "Предмет (Subject). Метод Read() должен быть переопределен для\n",
+    "добавления информации о предмете при чтении учебника.\n",
+    "\n",
+    "2. Художественная литература (Fiction): Должен содержать дополнительные\n",
+    "атрибуты, такие как Жанр (Genre). Метод Borrow() должен быть\n",
+    "переопределен для добавления информации о жанре при выдаче книги на\n",
+    "чтение.\n",
+    "\n",
+    "3. Научная литература (ScientificLiterature) (если требуется третий класс):\n",
+    "Должен содержать дополнительные атрибуты, такие как Область науки\n",
+    "(FieldOfScience). Метод GetInfo() должен быть переопределен для включения\n",
+    "информации об области науки в описании книги.\n",
     "\n",
     "#### Дополнительное задание\n",
     "Добавьте к сущестующим классам конструктора классов с использованием гетторов и сетторов и реализуйте взаимодействие объектов между собой"
@@ -52,8 +88,145 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Название: Алгебра и начала математического анализа 11 класс, Автор: Колягин Ю. М., Год издания: 2014\n",
+      "Вы читаете учебник 'Алгебра и начала математического анализа 11 класс' по предмету 'Математика'\n",
+      "Вам выдали книгу 'Алгебра и начала математического анализа 11 класс'\n",
+      "Название: Война и мир, Автор: Толстой Л.Н., Год издания: 1869\n",
+      "Вы прочитали книгу 'Война и мир'\n",
+      "Вам выдали художественную книгу 'Война и мир', жанр которой 'Исторический роман'\n",
+      "Название: Классическая механика, Автор: Ньютон И.С., Год издания: 1687, Область науки: Физика\n",
+      "Вы прочитали книгу 'Классическая механика'\n",
+      "Вам выдали книгу 'Классическая механика'\n"
+     ]
+    }
+   ],
+   "source": [
+    "using System;\n",
+    "\n",
+    "public interface IBook \n",
+    "{\n",
+    "    string Title { get; set; }\n",
+    "    string Author { get; set; }\n",
+    "    int YearOfPublication { get; set; }\n",
+    "\n",
+    "    void GetInfo();\n",
+    "    void Read();\n",
+    "    void Borrow();\n",
+    "}\n",
+    "\n",
+    "public interface ITextbook\n",
+    "{\n",
+    "    string Subject { get; set; }\n",
+    "}\n",
+    "\n",
+    "public interface IFiction \n",
+    "{\n",
+    "    string Genre { get; set; }\n",
+    "}\n",
+    "\n",
+    "public interface IScientificLiterature \n",
+    "{\n",
+    "    string FieldOfScience { get; set; }\n",
+    "}\n",
+    "\n",
+    "public class Book : IBook\n",
+    "{\n",
+    "    public string Title { get; set; }\n",
+    "    public string Author { get; set; }\n",
+    "    public int YearOfPublication { get; set; }\n",
+    "\n",
+    "    public Book(string title, string author, int yearOfPublication) \n",
+    "    {\n",
+    "        Title = title;\n",
+    "        Author = author;\n",
+    "        YearOfPublication = yearOfPublication;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void GetInfo() \n",
+    "    {\n",
+    "        Console.WriteLine($\"Название: {Title}, Автор: {Author}, Год издания: {YearOfPublication}\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual void Read() \n",
+    "    {\n",
+    "        Console.WriteLine($\"Вы прочитали книгу '{Title}'\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual void Borrow() \n",
+    "    {\n",
+    "        Console.WriteLine($\"Вам выдали книгу '{Title}'\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Textbook : Book, ITextbook \n",
+    "{\n",
+    "    public string Subject { get; set; }\n",
+    "\n",
+    "    public Textbook(string title, string author, int yearOfPublication, string subject)\n",
+    "        : base(title, author, yearOfPublication) \n",
+    "    {\n",
+    "        Subject = subject;\n",
+    "    }\n",
+    "\n",
+    "    public override void Read() \n",
+    "    {\n",
+    "        Console.WriteLine($\"Вы читаете учебник '{Title}' по предмету '{Subject}'\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Fiction : Book, IFiction \n",
+    "{\n",
+    "    public string Genre { get; set; }\n",
+    "\n",
+    "    public Fiction(string title, string author, int yearOfPublication, string genre)\n",
+    "        : base(title, author, yearOfPublication)\n",
+    "    {\n",
+    "        Genre = genre;\n",
+    "    }\n",
+    "\n",
+    "    public override void Borrow()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Вам выдали художественную книгу '{Title}', жанр которой '{Genre}'\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class ScientificLiterature : Book, IScientificLiterature \n",
+    "{\n",
+    "    public string FieldOfScience { get; set; }\n",
+    "\n",
+    "    public ScientificLiterature(string title, string author, int yearOfPublication, string fieldOfScience)\n",
+    "        : base(title, author, yearOfPublication)\n",
+    "    {\n",
+    "        FieldOfScience = fieldOfScience;\n",
+    "    }\n",
+    "\n",
+    "    public override void GetInfo() \n",
+    "    {\n",
+    "        Console.WriteLine($\"Название: {Title}, Автор: {Author}, Год издания: {YearOfPublication}, Область науки: {FieldOfScience}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Textbook mathTextbook = new Textbook(\"Алгебра и начала математического анализа 11 класс\", \"Колягин Ю. М.\", 2014, \"Математика\");\n",
+    "Fiction novel = new Fiction(\"Война и мир\", \"Толстой Л.Н.\", 1869, \"Исторический роман\");\n",
+    "ScientificLiterature physicsBook = new ScientificLiterature(\"Классическая механика\", \"Ньютон И.С.\", 1687, \"Физика\");\n",
+    "\n",
+    "mathTextbook.GetInfo();\n",
+    "mathTextbook.Read();\n",
+    "mathTextbook.Borrow();\n",
+    "\n",
+    "novel.GetInfo();\n",
+    "novel.Read();\n",
+    "novel.Borrow();\n",
+    "\n",
+    "physicsBook.GetInfo();\n",
+    "physicsBook.Read();\n",
+    "physicsBook.Borrow();"
+   ]
   }
  ],
  "metadata": {
